@@ -791,10 +791,8 @@ sub _get_recent_changes {
     }
 
     @rc = map {
-        my $url = $base_url
-                . CGI->escape($formatter->node_name_to_node_param($_->{name}));
-        # CGI->escape escapes commas in URLs.  This is annoying.
-        $url =~ s/%2C/,/gs;
+        my $param = $formatter->node_name_to_node_param( $_->{name} );
+        my $url = $base_url . OpenGuides::CGI->escape( $param );
         {
           name => CGI->escapeHTML($_->{name}),
           last_modified => CGI->escapeHTML($_->{last_modified}),
@@ -898,11 +896,11 @@ sub show_backlinks {
 
     my @backlinks = $wiki->list_backlinks( node => $args{id} );
     my @results = map {
-                          {
-                              url   => CGI->escape($formatter->node_name_to_node_param($_)),
-                              title => CGI->escapeHTML($_)
-                          }
-                      } sort @backlinks;
+      {
+       url => OpenGuides::CGI->escape($formatter->node_name_to_node_param($_)),
+       title => CGI->escapeHTML($_)
+      }
+    } sort @backlinks;
     my %tt_vars = ( results       => \@results,
                     num_results   => scalar @results,
                     not_deletable => 1,
