@@ -11,6 +11,7 @@ More detailed changelogs can be found at
         Make sure index pages don't offer page deletion links.
         Upgrade Leaflet version to 1.1.0.
         Make sure HTTPS website links are truncated in same way as HTTP.
+        Stop escaping commas in URLs in places that got missed last time.
 
 0.82    05 June 2016
         Add some extra CSS hooks to the templates.  Add new base stylesheet
